--- a/machine.html
+++ b/machine.html
@@ -139,7 +139,7 @@ time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p>Jul 13, 2019 ... Staff Machine Learning Engineer - Core Algorithms. Remote. Engineering ? 
 Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -163,7 +163,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
+<h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
       Backend Engineer ? Machine Learning Services - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -173,11 +173,11 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -204,7 +204,7 @@ Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p
 processing experience to join the ACV Labs team, working on a variety of cutting 
 edge?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clarifai/jobs/1784298?gh_jid=1784298'>Job Application for Applied Machine Learning Engineer at Clarifai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
@@ -215,12 +215,12 @@ acquisition and revenue growth in 2019. You value collaboration and want to?...<
 partnership with NVIDIA to deliver Deep Learning Institute (DLI) training to the 
 federal?...</p>
 <hr/>
-<h5><a href='https://mercari.workable.com/jobs/1071389'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/jobs/1071389'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2019?7?10? ... Experience using TensorFlow, PyTorch, Chainer, Caffe, or other deep learning 
 frameworks; Experience with data analysis and development using the cloud?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About the team: Video is 80% of today's global Internet traffic. The Engineering 
 team at Vimeo is building AI-driven tools to help anyone who wants to make a?...</p>
@@ -264,12 +264,12 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/data-scientist-11714'>Data Scientist (Machine Learning) - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... This position requires extensive background and knowledge in machine learning 
 and data science. A successful candidate should also have previous?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -277,11 +277,11 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1786624'>Job Application for Principal Software Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -293,7 +293,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -363,7 +363,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
+<h5><a href='https://opentextats.avature.net/careers/JobDetail/Montreal-QC-Canada-Technical-Product-Manager-Machine-Learning/24917'>Technical Product Manager - Machine Learning - Canada, QC, Montreal - 24917</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -375,7 +375,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
